syntax = "proto3";
import "google/protobuf/duration.proto";

option csharp_namespace = "LPS.Protos.Shared";

package metrics;

service MetricsProtoService {
    rpc UpdateConnections(UpdateConnectionsRequest) returns (UpdateConnectionsResponse);
    rpc UpdateResponseMetrics(UpdateResponseMetricsRequest) returns (UpdateResponseMetricsResponse);
    rpc UpdateDataTransmission(UpdateDataTransmissionRequest) returns (UpdateDataTransmissionResponse);
    rpc UpdateDurationMetric(UpdateDurationMetricRequest) returns (UpdateDurationMetricResponse);
}

message UpdateConnectionsRequest {
    string request_id = 1;
    bool increase = 2;
}

message UpdateConnectionsResponse {
    bool success = 1;
}

message UpdateResponseMetricsRequest {
    string request_id = 1;
    int32 response_code = 2;
    string status_reason = 3;
}

message UpdateResponseMetricsResponse {
    bool success = 1;
}

message UpdateDataTransmissionRequest {
    string request_id = 1;
    double data_size = 2;
    bool is_sent = 3;  // true = sent, false = received
}

message UpdateDataTransmissionResponse {
    bool success = 1;
}


enum DurationMetricType {
    TOTAL_TIME = 0;
    RECEIVING_TIME = 1;        // Renamed from DOWNSTREAM_TIME
    SENDING_TIME = 2;          // Renamed from UPSTREAM_TIME
    TLS_HANDSHAKE_TIME = 3;
    TCP_HANDSHAKE_TIME = 4;
    TIME_TO_FIRST_BYTE = 5;
    WAITING_TIME = 6;          // NEW: TTFB - TCP - TLS
}

message UpdateDurationMetricRequest {
    string request_id = 1;
    DurationMetricType metric_type = 2;
    double value_ms = 3;
}

message UpdateDurationMetricResponse {
    bool success = 1;
}

